--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
         <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+        <mysql-connector-java.version>5.1.44</mysql-connector-java.version>
     </properties>
 
     <dependencyManagement>
@@ -118,6 +119,12 @@
             <artifactId>cdi-api</artifactId>
             <version>${cdi-api.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector-java.version}</version>
         </dependency>
 
         <dependency>
