--- a/src/main/resources/modules/com/p6spy/main/spy.properties
+++ b/src/main/resources/modules/com/p6spy/main/spy.properties
@@ -3,6 +3,6 @@ reloadproperties=true
 appender=com.p6spy.engine.spy.appender.Slf4JLogger
 
 #logMessageFormat=com.p6spy.engine.spy.appender.SingleLineFormat
-logMessageFormat=com.lppsa.locus.common.logging.entity.NiceSqlLogFormat
+logMessageFormat=pl.devcoffee.p6spy.formatters.NiceSqlLogFormat
 
 executionThreshold=0
