--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pl.devcoffee</groupId>
     <artifactId>p6spy-mysql-fraction</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <name>p6spy-mysql-fraction</name>
     <description>p6spy fraction (module) for Wildfly Swarm using mysql module.</description>
@@ -50,7 +48,7 @@
         <connection>scm:git:https://github.com/PiotrRaszkowski/p6spy-mysql-fraction</connection>
         <url>scm:git:https://github.com/PiotrRaszkowski/p6spy-mysql-fraction</url>
         <developerConnection>scm:git:https://github.com/PiotrRaszkowski/p6spy-mysql-fraction</developerConnection>
-        <tag>HEAD</tag>
+        <tag>p6spy-mysql-fraction-1.0</tag>
     </scm>
 
     <properties>
