--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>pl.devcoffee</groupId>
     <artifactId>p6spy-mysql-fraction</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
 
     <name>p6spy-mysql-fraction</name>
     <description>p6spy fraction (module) for Wildfly Swarm using mysql module.</description>
@@ -48,7 +48,7 @@
         <connection>scm:git:https://github.com/PiotrRaszkowski/p6spy-mysql-fraction</connection>
         <url>scm:git:https://github.com/PiotrRaszkowski/p6spy-mysql-fraction</url>
         <developerConnection>scm:git:https://github.com/PiotrRaszkowski/p6spy-mysql-fraction</developerConnection>
-        <tag>HEAD</tag>
+        <tag>p6spy-mysql-fraction-1.1</tag>
     </scm>
 
     <properties>
